genearl fixes, hero layout changed, font size changed

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,5 +1,5 @@
 <section class="mb-20">
-    <h2 id="experience" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">EXPERIENCE</h2>    
+    <h2 id="experience" class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">EXPERIENCE</h2>    
     <div class="relative h-full">
         <div class="absolute ml-2 md:ml-0 left-0 top-4 md:left-1/2 w-[2px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
         <slot >
