--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -2,60 +2,23 @@
 interface Props {
     title: string,
     source: string,
-    description: string
+    description: string,
+    href: string
 }
 
-const { title, source, description } = Astro.props;
+const { title, source, description, href } = Astro.props;
 ---
 
-<section class="flex flex-col sm:mb-4 mb-1 sm:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
-    <!-- <div class="mb-6 sm:mb-0">
-        <img class="rounded-t-xl" src={source} alt={title}>
-    </div> -->
-    
-    <div id="animation-carousel" class="relative w-full mb-6 sm:mb-0" data-carousel="static">
-        <!-- Carousel wrapper -->
-        <div class="relative h-56 overflow-hidden rounded-lg">
-             <!-- Item 1 -->
-            <div class="hidden duration-200 ease-linear" data-carousel-item>
-                <img src={source}  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 z-40" alt="...">
-            </div>
-            <!-- Item 2 -->
-            <div class="hidden duration-200 ease-linear" data-carousel-item>
-                <img src={source}  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 z-40" alt="...">
-            </div>
-            <!-- Item 3 -->
-            <div class="hidden duration-200 ease-linear" data-carousel-item="active">
-                <img src={source}  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 z-40" alt="...">
-            </div>
-            <!-- Item 4 -->
-            <div class="hidden duration-200 ease-linear" data-carousel-item>
-                <img src={source}  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 z-40" alt="...">
-            </div>
-            <!-- Item 5 -->
-            <div class="hidden duration-200 ease-linear" data-carousel-item>
-                <img src={source}  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 z-40" alt="...">
-            </div>
-        </div>
-        <!-- Slider controls -->
-        <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-            <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-                <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-                </svg>
-                <span class="sr-only">Previous</span>
-            </span>
-        </button>
-        <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-            <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-                <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                </svg>
-                <span class="sr-only">Next</span>
-            </span>
-        </button>
+<section class="flex flex-col mb-4 sm:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
+    <div class="mb-6 sm:mb-0 overflow-hidden rounded-t-xl">
+        <a href={href} target="_blank"><img 
+			class="hover:animate-zoomIn hover:cursor-pointer" 
+            src={source} 
+            alt={title}>
+        </a>
     </div>
-    <div class="flex flex-col p-6">
+    
+    <div class="flex flex-col px-6 py-4">
         <h2 class="opacity-85 text-2xl font-semibold mb-3">{title}</h2>
         <slot name="skills"/>	
         <p class="text-base mb-4 text-gray-400 dark:text-gray-400">{description}</p>
