--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import GitIcon from '../icons/GitIcon.astro';
 			</ExperienceCard>
 		</Experience>
 		<Projects>
-			<ProjectCard title='PokéDex App' source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
+			<ProjectCard title='PokéDex App' href="https://pokeindex-app.netlify.app/" source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
 				<div slot="skills" class="flex flex-wrap mb-2">
 					<SkillPill color='bg-blue-500/30' skill="React">
 						<ReactIcon class="w-4 h-4" />
@@ -113,7 +113,7 @@ import GitIcon from '../icons/GitIcon.astro';
 					</Button>		
 				</div>
 			</ProjectCard>
-			<ProjectCard title='PokéDex App' source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
+			<ProjectCard title='PokéDex App' href="https://pokeindex-app.netlify.app/" source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
 				<div slot="skills" class="flex flex-wrap mb-2">
 					<SkillPill color='bg-blue-500/30' skill="React">
 						<ReactIcon class="w-4 h-4" />
@@ -129,12 +129,8 @@ import GitIcon from '../icons/GitIcon.astro';
 					<Button href="https://github.com/umigam3/pokedex-api" label="Source Code">
 						<SourceIcon class="w-4 h-4"></SourceIcon>
 					</Button>
-					<Button href="https://pokeindex-app.netlify.app/" label="Preview">
-						<PreviewIcon class="w-4 h-4"></PreviewIcon>
-					</Button>		
 				</div>
 			</ProjectCard>
 		</Projects>
-		<AboutMe />
 	</main>
 </Layout>
