color palette changed

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,7 +4,7 @@
     <div class="flex flex-wrap">
         <div class="w-full md:w-2/3 text-base mb-2 text-gray-300 py-4 pr-8">
             <p class="mb-4">
-                Computer Engineer with more than <span class="text-yellow-500 font-semibold">2 years of experience using PHP</span>. Worked mainly with
+                Computer Engineer with more than <span class="text-secondary font-semibold">2 years of experience using PHP</span>. Worked mainly with
                 HTML, CSS, JavaScript and SQL. Additionally, I have gained proficiency in Angular and TypeScript.
             </p>
         
@@ -14,7 +14,7 @@
             </p>
         
             <p class="mb-4">
-                One of my significant accomplishments includes <span class="text-yellow-500 font-semibold">working with Spain's first Moodle Premium Partner</span>, where 
+                One of my significant accomplishments includes <span class="text-secondary font-semibold">working with Spain's first Moodle Premium Partner</span>, where 
                 I developed crucial plugins for well-known clients in the e-learning industry.
             </p>    
         </div>
