--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,18 +7,18 @@ import Carousel from "./Carousel.astro"
 ---
 
 <section class="md:pt-12 pt-4">
-    <div class="relative flex flex-col md:flex-row mb-5 md:mb-52">
-        <section class="md:absolute flex justify-center md:pl-10 md:pb-4 md:py-0 right-3 top-0">
+    <div class="relative flex flex-col mb-8 lg:mb-52">
+        <section class="lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
             <img class="z-10 w-80 md:w-[485px] hero-image " src="hero-2.png">      
         </section>  
-        <section class="w-full md:w-2/3 flex flex-col justify-center md:mt-0 -mt-14 md:z-10">
-            <h1 class="md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r from-violet-500 to-violet-800 inline-block text-transparent bg-clip-text mb-4">
-                Hello! I'm
-                Gerard Doncel a
-                <span class="text-yellow-500 font-extrabold">Computer Engineer</span>
-                with more than <span class="text-yellow-500 font-extrabold">2 years
-                </span> in <span class="text-yellow-500 font-extrabold">web development
-                </span> and solid skills in <span class="text-yellow-500 font-extrabold">PHP</span>
+        <section class="w-full lg:w-3/4 flex flex-col justify-center lg:mt-0 -mt-14 md:z-10">
+            <h1 class="md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r text-c mb-4 text-primary">
+                <span class="inline lg:block">Hello! I'm</span>
+                <span class="inline lg:block">Gerard Doncel a</span>
+                <span class="text-secondary font-extrabold inline lg:block">Computer Engineer</span>
+                <span class="inline lg:block">with more than <span class="text-secondary font-extrabold">2 years</span></span>
+                <span class="inline lg:block">in <span class="text-secondary font-extrabold">web development</span>
+                <span class="inline lg:block"> and solid skills in <span class="text-secondary font-extrabold">PHP</span></span>
             </h1>
             <div class="flex flex-wrap sm:flex-nowrap gap-x-1">
                 <Button href="https://www.linkedin.com/in/gerard-doncel-gutierrez/" label="LinkedIn">
