--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,8 @@ import '@fontsource-variable/onest';
 	html {
 		font-family: 'Onest Variable', sans-serif;
 		scroll-behavior: smooth;
-		background-color: rgb(2, 6, 23, 1);
+		/* background-color: rgb(2, 6, 23, 1); */
+		background-color: #0e0b25;
 	}
 
 	::selection {
