hero image optimized

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,6 +132,6 @@ import GitIcon from '../icons/GitIcon.astro';
 				</div>
 			</ProjectCard>
 		</Projects>
-		<AboutMe></AboutMe>
+		</AboutMe>
 	</main>
 </Layout>
