new project, footer added

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,8 +9,8 @@
             </p>
         
             <p class="mb-4">
-                My journey in technology began at the age of 15 when 
-                I acquired a Raspberry Pi and began experimenting with various projects, sparking a lifelong passion for technology.
+                <span class="text-secondary font-semibold">My interest in technology started at the age of 15</span> when I got a Raspberry Pi and began experimenting with different projects. 
+                This experience led me to develop an interest in computer science ever since.
             </p>
         
             <p class="mb-4">
