--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import ExperienceCard from '../components/ExperienceCard.astro';
 import SkillPill from '../components/SkillPill.astro';
 import Projects from '../components/Projects.astro';
 import ProjectCard from '../components/ProjectCard.astro';
+import Footer from '../components/Footer.astro';
 
 // Icons
 import PhpIcon from '../icons/PHPIcon.astro';
@@ -20,6 +21,7 @@ import SqlIcon from '../icons/SQLIcon.astro';
 
 // Images
 import PokedexImage from '../assets/img/pokedex-project.png'
+import ScriptsImage from '../assets/img/unix-system-scripts.png'
 import ViteIcon from '../icons/ViteIcon.astro';
 import ReactIcon from '../icons/ReactIcon.astro';
 import Button from '../components/Button.astro';
@@ -27,6 +29,8 @@ import PreviewIcon from '../icons/PreviewIcon.astro';
 import SourceIcon from '../icons/SourceIcon.astro';
 import AboutMe from '../components/AboutMe.astro';
 import GitIcon from '../icons/GitIcon.astro';
+import BashIcon from '../icons/BashIcon.astro';
+import LinuxIcon from '../icons/LinuxIcon.astro';
 ---
 
 <Layout>
@@ -92,7 +96,7 @@ import GitIcon from '../icons/GitIcon.astro';
 			</ExperienceCard>
 		</Experience>
 		<Projects>
-			<ProjectCard title='PokéDex App' href="https://pokeindex-app.netlify.app/" source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
+			<ProjectCard title='PokéDex App' href="#" source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
 				<div slot="skills" class="flex flex-wrap mb-2">
 					<SkillPill color='bg-blue-500/30' skill="React">
 						<ReactIcon class="w-4 h-4" />
@@ -113,16 +117,13 @@ import GitIcon from '../icons/GitIcon.astro';
 					</Button>		
 				</div>
 			</ProjectCard>
-			<ProjectCard title='PokéDex App' href="https://pokeindex-app.netlify.app/" source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
+			<ProjectCard title='UNIX System Scripts' href="#" source={ScriptsImage.src} description="Collection of Bash scripts designed to enhance system administration and user management tasks on Unix-like systems. These scripts aim to automate various aspects of system monitoring, user behavior analysis, and resource utilization management.">
 				<div slot="skills" class="flex flex-wrap mb-2">
-					<SkillPill color='bg-blue-500/30' skill="React">
-						<ReactIcon class="w-4 h-4" />
+					<SkillPill color='bg-slate-500/30' skill="Bash">
+						<BashIcon class="w-4 h-4" />
 					</SkillPill>
-					<SkillPill color='bg-yellow-500/30' skill="JavaScript" >
-						<JavaScriptIcon class="w-4 h-4"/>
-					</SkillPill>
-					<SkillPill color='bg-pink-500/30' skill="Vite" >
-						<ViteIcon class="w-4 h-4" />
+					<SkillPill color='bg-red-500/30' skill="Linux" >
+						<LinuxIcon class="w-4 h-4" />
 					</SkillPill>	
 				</div>
 				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
@@ -132,6 +133,7 @@ import GitIcon from '../icons/GitIcon.astro';
 				</div>
 			</ProjectCard>
 		</Projects>
-		</AboutMe>
+		<AboutMe/>
+		<Footer/>
 	</main>
 </Layout>
