small project fix

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -9,8 +9,8 @@ interface Props {
 const { title, source, description, href } = Astro.props;
 ---
 
-<section class="flex flex-col mb-4 sm:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
-    <div class="mb-6 sm:mb-0 overflow-hidden rounded-t-xl">
+<section class="flex flex-col mb-4 md:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
+    <div class="mb-2 md:mb-0 overflow-hidden rounded-t-xl">
         <a href={href} target="_blank"><img 
 			class="hover:animate-zoomIn hover:cursor-pointer" 
             src={source} 
