--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,7 +127,7 @@ import LinuxIcon from '../icons/LinuxIcon.astro';
 					</SkillPill>	
 				</div>
 				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
-					<Button href="https://github.com/umigam3/pokedex-api" label="Source Code">
+					<Button href="https://github.com/umigam3/unix-system-scripts" label="Source Code">
 						<SourceIcon class="w-4 h-4"></SourceIcon>
 					</Button>
 				</div>
