--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,5 @@
-<section class="mb-10">
-    <h2 id="aboutme" class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>
+<section id="aboutme" class="mb-10 section">
+    <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>
 
     <div class="flex flex-wrap">
         <div class="w-full md:w-2/3 text-base mb-2 text-gray-300 py-4 pr-8">
