--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,12 +6,12 @@ import Button from "./Button.astro"
 import Carousel from "./Carousel.astro"
 ---
 
-<section class="md:pt-12 pt-4">
+<section id="hero" class="md:pt-12 pt-4">
     <div class="relative flex flex-col mb-8 lg:mb-52">
-        <section class="lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
+        <div class="lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
             <img class="z-10 w-80 md:w-[485px] hero-image " src="hero.png">      
-        </section>  
-        <section class="w-full lg:w-3/4 flex flex-col justify-center lg:mt-0 -mt-14 md:z-10">
+        </div>  
+        <div class="w-full lg:w-3/4 flex flex-col justify-center lg:mt-0 -mt-14 md:z-10">
             <h1 class="md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r text-c mb-4 text-primary">
                 <span class="inline lg:block">Hello! I'm</span>
                 <span class="inline lg:block">Gerard Doncel a</span>
@@ -31,7 +31,7 @@ import Carousel from "./Carousel.astro"
                     <ResumeIcon class="w-5 h-5" color="#FFF"/>
                 </Button>
             </div>
-        </section>  
+        </div>  
     </div>
     <Carousel />
 </section>
