--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,6 @@ import '@fontsource-variable/onest';
 			<div class="absolute bottom-0 left-[-15%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
 			<div class="absolute bottom-0 right-[-15%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
 		</div>
-		<Header />
 		<slot />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 	</body>
@@ -34,7 +33,7 @@ import '@fontsource-variable/onest';
 	html {
 		font-family: 'Onest Variable', sans-serif;
 		scroll-behavior: smooth;
-		/* background-color: rgb(2, 6, 23, 1); */
+		scroll-padding-top: 75px;
 		background-color: #0e0b25;
 	}
 
