--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
     <span>© 2024 Gerard Doncel Gutiérrez</span>
     <div>
         <nav class="flex justify-center items-center gap-x-4">
-            <a class="hover:sm:text-white" href="#">Back to top</a>
+            <a class="hover:sm:text-secondary hover:sm:font-bold" href="#">Back to top</a>
         </nav>
     </div>
 </footer>
