--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,12 +7,27 @@ import '@fontsource-variable/onest';
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
                 <meta name="theme-color" content="#161616" />
-		<title>Gerard Doncel - Full Stack Developer</title>
+		<title>Gerard Doncel</title>
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://gerarddoncel.netlify.app">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Gerard Doncel">
+		<meta property="og:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
+		<meta property="og:image" content="/meta.png">
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="gerarddoncel.netlify.app">
+		<meta property="twitter:url" content="https://gerarddoncel.netlify.app">
+		<meta name="twitter:title" content="Gerard Doncel">
+		<meta name="twitter:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
+		<meta name="twitter:image" content="/meta.png">
 	</head>
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
