--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import '@fontsource-variable/onest';
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Gerard Doncel">
 		<meta property="og:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
-		<meta property="og:image" content="/meta.png">
+		<meta property="og:image" content="meta.png">
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@ import '@fontsource-variable/onest';
 		<meta property="twitter:url" content="https://gerarddoncel.netlify.app">
 		<meta name="twitter:title" content="Gerard Doncel">
 		<meta name="twitter:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
-		<meta name="twitter:image" content="/meta.png">
+		<meta name="twitter:image" content="meta.png">
 	</head>
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
