--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,8 @@ import '@fontsource-variable/onest';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-                <meta name="theme-color" content="#161616" />
+		<meta name="theme-color" content="#161616" />
+		<meta name="color-scheme" content="dark">
 		<title>Gerard Doncel</title>
 
 		<!-- Facebook Meta Tags -->
@@ -19,7 +20,7 @@ import '@fontsource-variable/onest';
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Gerard Doncel">
 		<meta property="og:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
-		<meta property="og:image" content="meta.png">
+		<meta property="og:image" content="/meta.png">
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -27,7 +28,7 @@ import '@fontsource-variable/onest';
 		<meta property="twitter:url" content="https://gerarddoncel.netlify.app">
 		<meta name="twitter:title" content="Gerard Doncel">
 		<meta name="twitter:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
-		<meta name="twitter:image" content="meta.png">
+		<meta name="twitter:image" content="/meta.png">
 	</head>
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
