project cards improved, new cv added

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -27,7 +27,7 @@ import Carousel from "./Carousel.astro"
                 <Button href="https://github.com/umigam3" label="GitHub">
                     <GitHubIcon class="w-5 h-5" color="#FFF"/>
                 </Button>
-                <Button href="cv-resume-en.pdf" label="Resume">
+                <Button href="cv-resume-es.pdf" label="Resume">
                     <ResumeIcon class="w-5 h-5" color="#FFF"/>
                 </Button>
             </div>
