--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,10 +10,7 @@ const { title, source, description } = Astro.props;
 
 <div class="flex flex-col mb-4 md:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
     <div class="mb-2 md:mb-0 overflow-hidden rounded-t-xl">
-        <img 
-			class="hover:sm:animate-zoomIn hover:sm:cursor-pointer" 
-            src={source} 
-            alt={title}>
+        <img src={source} alt={title}>
     </div>
     
     <div class="flex flex-col px-6 py-4">
