hero animations added

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,17 +8,17 @@ import Carousel from "./Carousel.astro"
 
 <section id="hero" class="md:pt-12 pt-4">
     <div class="relative flex flex-col mb-8 lg:mb-52">
-        <div class="lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
-            <img class="z-10 w-80 md:w-[485px] hero-image " src="hero.png">      
+        <div class="animate-slidein lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
+            <img class=" z-10 w-80 md:w-[485px] hero-image " src="hero.png">      
         </div>  
         <div class="w-full lg:w-3/4 flex flex-col justify-center lg:mt-0 -mt-14 md:z-10">
-            <h1 class="md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r text-c mb-4 text-primary">
-                <span class="inline lg:block">Hello! I'm</span>
-                <span class="inline lg:block">Gerard Doncel a</span>
-                <span class="text-secondary font-extrabold inline lg:block">Computer Engineer</span>
-                <span class="inline lg:block">with more than <span class="text-secondary font-extrabold">2 years</span></span>
-                <span class="inline lg:block">in <span class="text-secondary font-extrabold">web development</span>
-                <span class="inline lg:block"> and solid skills in <span class="text-secondary font-extrabold">PHP</span></span>
+            <h1 class="animate-slidein lg:animate-none md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r text-c mb-4 text-primary">
+                <span class="lg:opacity-0 lg:animate-slidein inline lg:block">Hello! I'm</span>
+                <span class="lg:opacity-0 lg:animate-slidein200 inline lg:block">Gerard Doncel a</span>
+                <span class="lg:opacity-0 lg:animate-slidein300 text-secondary font-extrabold inline lg:block">Computer Engineer</span>
+                <span class="lg:opacity-0 lg:animate-slidein400 inline lg:block">with more than <span class="text-secondary font-extrabold">2 years</span></span>
+                <span class="lg:opacity-0 lg:animate-slidein500 inline lg:block">in <span class="text-secondary font-extrabold">web development</span>
+                <span class="lg:opacity-0 lg:animate-slidein500 inline lg:block"> and solid skills in <span class="text-secondary font-extrabold">PHP</span></span>
             </h1>
             <div class="flex flex-wrap sm:flex-nowrap gap-x-1">
                 <Button href="https://www.linkedin.com/in/gerard-doncel-gutierrez/" label="LinkedIn">
