--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -8,9 +8,9 @@ interface Props {
 const { title, source, description } = Astro.props;
 ---
 
-<div class="flex flex-col mb-4 md:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
-    <div class="mb-2 md:mb-0 overflow-hidden rounded-t-xl">
-        <img src={source} alt={title}>
+<div class="flex flex-col mb-12 md:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
+    <div class=" mb-2 md:mb-0 overflow-hidden rounded-t-xl">
+        <img class="hover:animate-zoomIn" src={source} alt={title}>
     </div>
     
     <div class="flex flex-col px-6 py-4">
