--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -19,7 +19,7 @@
             </p>    
         </div>
         <div class="opacity-85 w-full md:w-1/3 py-4 flex justify-center items-center">
-            <img class="w-72 rounded-full" src="avatar.png">      
+            <img class="w-72 rounded-full" src="avatar.webp">      
         </div>
     </div>
 </section>
