--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,9 +23,9 @@ import NextIcon from '../icons/NextIcon.astro';
 
 
 // Images
-import PokedexImage from '../assets/img/pokedex-project.png'
-import ScriptsImage from '../assets/img/unix-system-scripts.png'
-import AllToolsDev from '../assets/img/all-tools-dev.png'
+import PokedexImage from '../assets/img/pokedex-project.webp'
+import ScriptsImage from '../assets/img/unix-system-scripts.webp'
+import AllToolsDev from '../assets/img/all-tools-dev.webp'
 import ViteIcon from '../icons/ViteIcon.astro';
 import ReactIcon from '../icons/ReactIcon.astro';
 import Button from '../components/Button.astro';
