--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,7 +1,81 @@
+---
+// Components
+import ExperienceCard from '../components/ExperienceCard.astro';
+import SkillPill from '../components/SkillPill.astro';
+
+// Icons
+import PhpIcon from '../icons/PHPIcon.astro';
+import AngularIcon from '../icons/AngularIcon.astro';
+import TypeScriptIcon from '../icons/TypeScriptIcon.astro';
+import JavaScriptIcon from '../icons/JavaScriptIcon.astro';
+import HtmlIcon from '../icons/HTMLIcon.astro';
+import CssIcon from '../icons/CSSIcon.astro';
+import WordPressIcon from '../icons/WordPressIcon.astro';
+import SqlIcon from '../icons/SQLIcon.astro';
+import GitIcon from '../icons/GitIcon.astro';
+---
+
+
 <section id="experience" class="mb-20">
     <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">EXPERIENCE</h2>    
     <div class="relative h-full">
         <div class="absolute ml-2 md:ml-0 left-0 top-4 md:left-1/2 w-[2px] bg-secondary transform -translate-x-1/2 h-full"></div>
-        <slot >
+        <ExperienceCard 
+            date="Jan 2023 - Present"
+            position="Full Stack Developer"
+            company="3&Punt"
+            description="Developing quality Moodle plugins and integrations. Utilizing technologies to enhance the Moodle e-learning experience. Collaborating with clients, I analyze requirements to craft optimal solutions and ensure smooth integration."
+            side="left"> 
+            <div class="flex flex-wrap justify-start md:justify-end">
+                <SkillPill color='bg-indigo-500/30' skill="PHP">
+                    <PhpIcon class="w-4 h-4"/>
+                </SkillPill>
+                <SkillPill color='bg-yellow-500/30' skill="JavaScript" >
+                    <JavaScriptIcon class="w-4 h-4"/>
+                </SkillPill>
+                <SkillPill color='bg-orange-500/30' skill="HTML" >
+                    <HtmlIcon class="w-3 h-4"/>
+                </SkillPill>
+                <SkillPill color='bg-sky-500/30' skill="CSS">
+                    <CssIcon class="w-3 h-4"></Css>
+                </SkillPill>
+                <SkillPill color='bg-slate-500/30' skill="MySQL" >
+                    <SqlIcon class="w-4 h-4"/>
+                </SkillPill>
+                <SkillPill color='bg-amber-500/30' skill="Git" >
+                    <GitIcon class="w-4 h-4"/>
+                </SkillPill>
+            </div>
+        </ExperienceCard>
+        <ExperienceCard 
+            date="Apr 2022 - Sep 2022"
+            position="Web Developer"
+            company="Namastech"
+            description="Fixing general bugs of their web application. (4DMOVIN) Development of small tools to imporve web utility. Building WordPress sites, including landing pages, working with woo-commerce."
+            side="right">
+            <div class="flex flex-wrap justify-start">
+                <SkillPill color='bg-indigo-500/30' skill="PHP">
+                    <PhpIcon class="w-4 h-4" />
+                </SkillPill>
+                <SkillPill color='bg-red-500/30' skill="Angular" >
+                    <AngularIcon class="w-5 h-5" />
+                </SkillPill>
+                <SkillPill color='bg-blue-500/30' skill="TypeScript" >
+                    <TypeScriptIcon class="w-4 h-4" />
+                </SkillPill>
+                <SkillPill color='bg-orange-500/30' skill="HTML" >
+                    <HtmlIcon class="w-3 h-4" />
+                </SkillPill>
+                <SkillPill color='bg-sky-500/30' skill="CSS">
+                    <CssIcon class="w-3 h-4" />
+                </SkillPill>
+                <SkillPill color='bg-cyan-500/30' skill="WordPress" >
+                    <WordPressIcon class="w-4 h-4" />
+                </SkillPill>
+                <SkillPill color='bg-slate-500/30' skill="MySQL" >
+                    <SqlIcon class="w-4 h-4" />
+                </SkillPill>					
+            </div>
+        </ExperienceCard>
     </div>
 </section>
