--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,163 +1,21 @@
 ---
-// Components
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro'
 import Experience from '../components/Experience.astro';
-import ExperienceCard from '../components/ExperienceCard.astro';
-import SkillPill from '../components/SkillPill.astro';
 import Projects from '../components/Projects.astro';
-import ProjectCard from '../components/ProjectCard.astro';
 import Footer from '../components/Footer.astro';
-
-// Icons
-import PhpIcon from '../icons/PHPIcon.astro';
-import AngularIcon from '../icons/AngularIcon.astro';
-import TypeScriptIcon from '../icons/TypeScriptIcon.astro';
-import JavaScriptIcon from '../icons/JavaScriptIcon.astro';
-import HtmlIcon from '../icons/HTMLIcon.astro';
-import CssIcon from '../icons/CSSIcon.astro';
-import WordPressIcon from '../icons/WordPressIcon.astro';
-import SqlIcon from '../icons/SQLIcon.astro';
-import NextIcon from '../icons/NextIcon.astro';
-
-
-// Images
-import PokedexImage from '../assets/img/pokedex-project.webp'
-import ScriptsImage from '../assets/img/unix-system-scripts.webp'
-import AllToolsDev from '../assets/img/all-tools-dev.webp'
-import ViteIcon from '../icons/ViteIcon.astro';
-import ReactIcon from '../icons/ReactIcon.astro';
-import Button from '../components/Button.astro';
-import PreviewIcon from '../icons/PreviewIcon.astro';
-import SourceIcon from '../icons/SourceIcon.astro';
 import AboutMe from '../components/AboutMe.astro';
-import GitIcon from '../icons/GitIcon.astro';
-import BashIcon from '../icons/BashIcon.astro';
-import LinuxIcon from '../icons/LinuxIcon.astro';
 ---
 
 <Layout>
 	<Header />
 	<main class="mx-auto flex flex-col max-w-6xl px-6 h-full">
 		<Hero />
-		<Experience>
-			<ExperienceCard 
-				date="Jan 2023 - Present"
-				position="Full Stack Developer"
-				company="3&Punt"
-				description="Developing quality Moodle plugins and integrations. Utilizing technologies to enhance the Moodle e-learning experience. Collaborating with clients, I analyze requirements to craft optimal solutions and ensure smooth integration."
-				side="left"> 
-				<div class="flex flex-wrap justify-start md:justify-end">
-					<SkillPill color='bg-indigo-500/30' skill="PHP">
-						<PhpIcon class="w-4 h-4"/>
-					</SkillPill>
-					<SkillPill color='bg-yellow-500/30' skill="JavaScript" >
-						<JavaScriptIcon class="w-4 h-4"/>
-					</SkillPill>
-					<SkillPill color='bg-orange-500/30' skill="HTML" >
-						<HtmlIcon class="w-3 h-4"/>
-					</SkillPill>
-					<SkillPill color='bg-sky-500/30' skill="CSS">
-						<CssIcon class="w-3 h-4"></Css>
-					</SkillPill>
-					<SkillPill color='bg-slate-500/30' skill="MySQL" >
-						<SqlIcon class="w-4 h-4"/>
-					</SkillPill>
-					<SkillPill color='bg-amber-500/30' skill="Git" >
-						<GitIcon class="w-4 h-4"/>
-					</SkillPill>
-				</div>
-			</ExperienceCard>
-        	<ExperienceCard 
-				date="Apr 2022 - Sep 2022"
-				position="Web Developer"
-				company="Namastech"
-				description="Fixing general bugs of their web application. (4DMOVIN) Development of small tools to imporve web utility. Building WordPress sites, including landing pages, working with woo-commerce."
-				side="right">
-				<div class="flex flex-wrap justify-start">
-					<SkillPill color='bg-indigo-500/30' skill="PHP">
-						<PhpIcon class="w-4 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-red-500/30' skill="Angular" >
-						<AngularIcon class="w-5 h-5" />
-					</SkillPill>
-					<SkillPill color='bg-blue-500/30' skill="TypeScript" >
-						<TypeScriptIcon class="w-4 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-orange-500/30' skill="HTML" >
-						<HtmlIcon class="w-3 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-sky-500/30' skill="CSS">
-						<CssIcon class="w-3 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-cyan-500/30' skill="WordPress" >
-						<WordPressIcon class="w-4 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-slate-500/30' skill="MySQL" >
-						<SqlIcon class="w-4 h-4" />
-					</SkillPill>					
-				</div>
-			</ExperienceCard>
-		</Experience>
-		<Projects>
-			<ProjectCard title='PokéDex App' source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display Pokémon information.">
-				<div slot="skills" class="flex flex-wrap mb-2">
-					<SkillPill color='bg-blue-500/30' skill="React">
-						<ReactIcon class="w-4 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-yellow-500/30' skill="JavaScript" >
-						<JavaScriptIcon class="w-4 h-4"/>
-					</SkillPill>
-					<SkillPill color='bg-pink-500/30' skill="Vite" >
-						<ViteIcon class="w-4 h-4" />
-					</SkillPill>	
-				</div>
-				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
-					<Button href="https://github.com/umigam3/pokedex-api" label="Source Code">
-						<SourceIcon class="w-4 h-4"></SourceIcon>
-					</Button>
-					<Button href="https://pokeindex-app.netlify.app/" label="Preview">
-						<PreviewIcon class="w-4 h-4"></PreviewIcon>
-					</Button>		
-				</div>
-			</ProjectCard>
-			<ProjectCard title='UNIX System Scripts' source={ScriptsImage.src} description="Collection of Bash scripts designed to enhance system administration and user management tasks on Unix-like systems.">
-				<div slot="skills" class="flex flex-wrap mb-2">
-					<SkillPill color='bg-slate-500/30' skill="Bash">
-						<BashIcon class="w-4 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-red-500/30' skill="Linux" >
-						<LinuxIcon class="w-4 h-4" />
-					</SkillPill>	
-				</div>
-				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
-					<Button href="https://github.com/umigam3/unix-system-scripts" label="Source Code">
-						<SourceIcon class="w-4 h-4"></SourceIcon>
-					</Button>
-				</div>
-			</ProjectCard>
-			<ProjectCard title='Developer Tools' source={AllToolsDev.src} description="A collection of coding tools designed to simplify developers lives and boost productivity.">
-				<div slot="skills" class="flex flex-wrap mb-2">
-					<SkillPill color='bg-slate-500/0' skill="Next JS" >
-						<NextIcon class="w-4 h-4" />
-					</SkillPill>
-					<SkillPill color='bg-yellow-500/30' skill="Javascript">
-						<JavaScriptIcon class="w-4 h-4" />
-					</SkillPill>	
-				</div>
-				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
-					<Button href="https://github.com/umigam3/dev-tools" label="Source Code">
-						<SourceIcon class="w-4 h-4"></SourceIcon>
-					</Button>
-					<Button href="https://alltoolsdev.netlify.app/" label="Preview">
-						<PreviewIcon class="w-4 h-4"></PreviewIcon>
-					</Button>
-				</div>
-			</ProjectCard>
-		</Projects>
-		<AboutMe/>
-		<Footer/>
+		<Experience />
+		<Projects />
+		<AboutMe />
+		<Footer />
 	</main>
 </Layout>
 
