--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ import Carousel from "./Carousel.astro"
 <section id="hero" class="md:pt-12 pt-4">
     <div class="relative flex flex-col mb-8 lg:mb-52">
         <div class="animate-slidein lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
-            <img class=" z-10 w-80 md:w-[485px] hero-image " src="hero.webp">      
+            <img class=" z-10 w-80 md:w-[485px] hero-image " src="hero.webp" alt="Gerard Doncel">      
         </div>  
         <div class="w-full lg:w-3/4 flex flex-col justify-center lg:mt-0 -mt-14 md:z-10">
             <h1 class="animate-slidein lg:animate-none md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r text-c mb-4 text-primary">
